{
  "version": 4,
  "terraform_version": "1.8.2",
  "serial": 171,
  "lineage": "a922ce7b-5d77-a823-93d1-d63495e9b906",
  "resources": [
    {
      "mode": "data",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "ami": "ami-0b54318913c8316f5",
            "arn": "arn:aws:ec2:us-east-1:026959335123:instance/i-0166b7144673d9dc3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "filter": [
              {
                "name": "tag:eks:nodegroup-name",
                "values": [
                  "NG-api-gerenciamento"
                ]
              }
            ],
            "get_password_data": false,
            "get_user_data": false,
            "iam_instance_profile": "eks-14c7b8fc-0078-fd60-5a77-e418c094f01b",
            "id": "i-0166b7144673d9dc3",
            "instance_state": "running",
            "instance_type": "t3a.medium",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface_id": "eni-0edb561866225d889",
            "placement_partition_number": 0,
            "private_dns": "ip-172-31-39-32.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.39.32",
            "public_dns": "ec2-184-73-45-4.compute-1.amazonaws.com",
            "public_ip": "184.73.45.4",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 150,
                "throughput": 0,
                "volume_id": "vol-055540258a8ab3461",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "secondary_private_ips": [
              "172.31.33.20",
              "172.31.34.50",
              "172.31.36.195",
              "172.31.41.19",
              "172.31.45.145"
            ],
            "security_groups": [
              "eks-cluster-sg-api-gerenciamento-1117236608"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-042b1fecc92fa3bc1",
            "tags": {
              "eks:cluster-name": "api-gerenciamento",
              "eks:nodegroup-name": "NG-api-gerenciamento",
              "k8s.io/cluster-autoscaler/api-gerenciamento": "owned",
              "k8s.io/cluster-autoscaler/enabled": "true",
              "kubernetes.io/cluster/api-gerenciamento": "owned"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05c0a73607087c780"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:026959335123:loadbalancer/app/ALB-api-gerenciamento/275f7e5f671597dc",
            "arn_suffix": "app/ALB-api-gerenciamento/275f7e5f671597dc",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "ALB-api-gerenciamento-1244850155.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:026959335123:loadbalancer/app/ALB-api-gerenciamento/275f7e5f671597dc",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ALB-api-gerenciamento",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0f9057ae56c95767a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-012388470a2e0d4e4"
              },
              {
                "subnet_id": "subnet-01672dab6b387d4e6"
              },
              {
                "subnet_id": "subnet-042b1fecc92fa3bc1"
              }
            ],
            "subnets": [
              "subnet-012388470a2e0d4e4",
              "subnet-01672dab6b387d4e6",
              "subnet-042b1fecc92fa3bc1"
            ],
            "vpc_id": "vpc-064ba82a03c2e4940",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:026959335123:listener/app/ALB-api-gerenciamento/275f7e5f671597dc/fb68b1c03fe3676d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:026959335123:targetgroup/TG-api-gerenciamento/7eaee3dcc637bd72",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:026959335123:listener/app/ALB-api-gerenciamento/275f7e5f671597dc/fb68b1c03fe3676d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:026959335123:loadbalancer/app/ALB-api-gerenciamento/275f7e5f671597dc",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.alb",
            "aws_lb_target_group.tg",
            "aws_security_group.sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:026959335123:targetgroup/TG-api-gerenciamento/7eaee3dcc637bd72",
            "arn_suffix": "targetgroup/TG-api-gerenciamento/7eaee3dcc637bd72",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "30007",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:026959335123:targetgroup/TG-api-gerenciamento/7eaee3dcc637bd72",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "TG-api-gerenciamento",
            "port": 30007,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-064ba82a03c2e4940"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:026959335123:targetgroup/TG-api-gerenciamento/7eaee3dcc637bd72-20240513124148617800000002",
            "port": 30007,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:026959335123:targetgroup/TG-api-gerenciamento/7eaee3dcc637bd72",
            "target_id": "i-0166b7144673d9dc3"
          },
          "dependencies": [
            "aws_eks_cluster.eks-cluster",
            "aws_eks_node_group.node-group",
            "aws_lb_target_group.tg",
            "aws_security_group.sg",
            "data.aws_instance.ec2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:026959335123:security-group/sg-0f9057ae56c95767a",
            "description": "Grupo usado para a api de gerenciamento",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f9057ae56c95767a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "SG-api-gerenciamento",
            "name_prefix": "",
            "owner_id": "026959335123",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-064ba82a03c2e4940"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}